kubernetes/neo/apps/observability/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-app
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: istio-gateways
  hostnames:
    - "vlogs.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: victoria-logs
          port: 9428
          weight: 100
